--- a/Capstone.Tests/Capstone.Tests.csproj
+++ b/Capstone.Tests/Capstone.Tests.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\Capstone\Capstone.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DAL\test-script.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
